Atualizando completamente o código